Fix popup overflow

--- a/src/components/OrderPopup/style.scss
+++ b/src/components/OrderPopup/style.scss
@@ -14,19 +14,20 @@
   z-index: 2;
 
   .popup-inner {
-    position: relative;
     margin: 1rem;
     width: 100%;
     max-width: 1200px;
+    height: 600px;
     background-color: #fff;
-
-    // display: grid;
-    // grid-template-rows: 6fr 1fr;
 
     font-size: 1rem;
     border-radius: 10px;
     padding: 2rem;
 
+    display: grid;
+    grid-template-rows: 3fr 1fr;
+
+    overflow: auto;
     .input-group {
       display: grid;
       grid-template-columns: 1fr 1fr;
@@ -70,7 +71,7 @@
 
           margin-bottom: 1rem;
 
-          height: 680px;
+          max-height: 400px;
           overflow: auto;
         }
       }
@@ -111,6 +112,23 @@
             color: #036bfe;
             padding: 0.5rem 1rem;
             border-radius: 10px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 650px) {
+  .popup {
+    .popup-inner {
+      .input-group {
+        display: flex;
+        flex-direction: column;
+
+        .orders-area {
+          .orders-list {
+            max-height: 1200px;
           }
         }
       }
